AB#213918: Layout issues fixing bug size play button.

--- a/docroot/themes/custom/emulsifymars/components/01-atoms/video/inline-video/_video.scss
+++ b/docroot/themes/custom/emulsifymars/components/01-atoms/video/inline-video/_video.scss
@@ -143,6 +143,10 @@
     }
   }
 
+  &__playpause[data-state="pause"] .play-icon{
+    display: none;
+  }
+
   &__playpause[data-state="pause"] {
     @include pausebutton;
 
